# checkbox-test

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
app/: main.py
app/persistence/: connect.py  models.py
app/persistence/repository/: auth.py  receipts.py
app/router/: auth.py  receipts.py
app/service/: auth.py  config.py  messages.py  schemas.py  shemas.py  utils.py
docs/: conf.py  index.html
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js  searchtools.js
docs/html/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
html/: .buildinfo  genindex.html  index.html
migrations/: env.py
migrations/versions/: 0fa15cb0692f_fix_tables.py  26bcee7dc375_rename_field_in_receipts.py  3b109881ade5_added_tables.py  7319d5a54f23_initial_migrations.py  b08821df434b_add_user.py  cd0f6a1b56cf_del_fields.py  d76871bde060_initial_migrations.py  dde469c6a24c_added_urls.py
test/: conftest.py  test.db  test_auth.py  test_invalid_actions.py  test_public_receipt.py  test_receipt_creation.py  test_receipt_listing.py
